--- a/src/style/events.scss
+++ b/src/style/events.scss
@@ -4,13 +4,16 @@
 
 .events-box{
   width: 100%;
-  margin-top: 4%;
+  margin-top: 8%;
   font-family: 'Hind', sans-serif;
 }
 
 .display-options{
   cursor: pointer;
   text-align: center;
+  position: relative;
+  top: 30px;
+  margin-bottom: 30px;
   .fa-bars{
     margin-left: 20px;
     font-size: 2.1em;
